--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto+Condensed&display=swap"
       rel="stylesheet"
     />
     <title>Where Was I</title>
